Fix test failures across caching and context suites